--- a/client/package.json
+++ b/client/package.json
@@ -42,5 +42,6 @@
   "devDependencies": {
     "node-sass": "^4.13.1",
     "redux-devtools-extension": "^2.13.8"
-  }
+  },
+  "homepage": "/client/"
 }
