--- a/.gitignore
+++ b/.gitignore
@@ -24,10 +24,9 @@ yarn-error.log*
 
 
 # my ignores
-/client/node_modules
-/client/src/Assets/
-/client/.env
-/client/build
+/client
 /scss
 /dist
 /assets
+/SCSS
+.env.local
